// Vitest Snapshot v1

exports[`Radio > Radio baseVue demo works fine 1`] = `
<div
  class="tdesign-radio-base"
>
  <div
    class="tdesign-demo-block"
  >
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name=""
        type="radio"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        
        未选中项
        
      </span>
    </label>
    <label
      class="t-radio"
    >
      <input
        class="t-radio__former"
        name=""
        type="radio"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        
         可取消选中项 
        
      </span>
    </label>
    <label
      class="t-radio t-is-checked"
    >
      <input
        class="t-radio__former"
        name=""
        type="radio"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        
         选中项 
        
      </span>
    </label>
    <label
      class="t-radio t-is-checked t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        name=""
        type="radio"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        
         选中禁用态 
        
      </span>
    </label>
    <label
      class="t-radio t-is-disabled"
    >
      <input
        class="t-radio__former"
        disabled=""
        name=""
        type="radio"
      />
      <span
        class="t-radio__input"
      />
      <span
        class="t-radio__label"
      >
        
         未选中禁用态 
        
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio > Radio buttonVue demo works fine 1`] = `
<div
  class="tdesign-radio-button"
  data-v-e6b66aa6=""
>
  <div
    data-v-e6b66aa6=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
      data-v-e6b66aa6=""
    >
      
      <label
        class="t-radio-button"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项一 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项二 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked t-is-disabled"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项三 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项四 
          
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    data-v-e6b66aa6=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
      data-v-e6b66aa6=""
    >
      
      <label
        class="t-radio-button"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bj"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项一 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项二 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked t-is-disabled"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="gz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项三 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
        data-v-e6b66aa6=""
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="sz"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           选项四 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`Radio > Radio groupVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  data-v-58cf2f54=""
>
  <div
    data-v-58cf2f54=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
      data-v-58cf2f54=""
    >
      
      <label
        class="t-radio t-is-disabled"
      >
        <input
          class="t-radio__former"
          disabled=""
          name="city"
          type="radio"
          value="1"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项一
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="2"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项二
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="3"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项三
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="4"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项四
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    data-v-58cf2f54=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
      data-v-58cf2f54=""
    >
      
      <label
        class="t-radio t-is-checked"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="选项一"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项一
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="选项二"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项二
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="选项三"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项三
          
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          name="city"
          type="radio"
          value="选项四"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项四
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    data-v-58cf2f54=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
      data-v-58cf2f54=""
    >
      
      <label
        class="t-radio t-is-checked"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项一
          
        </span>
      </label>
      <label
        class="t-radio"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项二
          
        </span>
      </label>
      <label
        class="t-radio"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项三
          
        </span>
      </label>
      <label
        class="t-radio t-is-disabled"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          disabled=""
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          选项四
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <h5
    data-v-58cf2f54=""
  >
    可取消选中单选框组
  </h5>
  <div
    data-v-58cf2f54=""
  >
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
      data-v-58cf2f54=""
    >
      
      <label
        class="t-radio t-is-checked"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          可取消选中项一
          
        </span>
      </label>
      <label
        class="t-radio"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          可取消选中项二
          
        </span>
      </label>
      <label
        class="t-radio"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          可取消选中项三
          
        </span>
      </label>
      <label
        class="t-radio"
        data-v-58cf2f54=""
      >
        <input
          class="t-radio__former"
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          
          不可取消选中项
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Radio > Radio sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-radio-group t-size-s t-radio-group__outline"
  >
    
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项一
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项二
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="3"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项三
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="4"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项四
        
        
      </span>
    </label>
    
    <!---->
  </div>
  <div
    class="t-radio-group t-size-m t-radio-group__outline"
  >
    
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项一
        
        
      </span>
    </label>
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项二
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="3"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项三
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="4"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项四
        
        
      </span>
    </label>
    
    <!---->
  </div>
  <div
    class="t-radio-group t-size-l t-radio-group__outline"
  >
    
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="1"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项一
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="2"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项二
        
        
      </span>
    </label>
    <label
      class="t-radio-button t-is-checked"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="3"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项三
        
        
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        name=""
        type="radio"
        value="4"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        
        
        选项四
        
        
      </span>
    </label>
    
    <!---->
  </div>
</div>
`;

exports[`Radio > Radio typeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <h5>
      边框型单选按钮
    </h5>
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项一
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项二
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项三
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项四
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="5"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项五
          
          
        </span>
      </label>
      
      <!---->
    </div>
    <div
      class="t-radio-group t-size-m t-radio-group__outline"
    >
      
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="1"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项一
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="2"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项二
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="3"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选项三
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
          value="4"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          选中禁用态
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-disabled"
      >
        <input
          class="t-radio-button__former"
          disabled=""
          name=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
          未选中禁用态
          
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    class="tdesign-demo-block-column"
  >
    <h5>
      填充型单选按钮
    </h5>
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="1"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项一
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="2"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项二
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="3"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项三
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="4"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项四
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="5"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项五
            
            
          </span>
        </label>
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled t-radio-group--primary-filled"
      >
        
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="1"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项一
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="2"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项二
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="3"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项三
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="4"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项四
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="5"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项五
            
            
          </span>
        </label>
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="1"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项一
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="2"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项二
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="3"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项三
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="4"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选中禁用态
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="5"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            未选中禁用态
            
            
          </span>
        </label>
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div>
      <div
        class="t-radio-group t-size-m t-radio-group--filled t-radio-group--primary-filled"
      >
        
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="1"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项一
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="2"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项二
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="3"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选项三
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="4"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            选中禁用态
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-disabled"
        >
          <input
            class="t-radio-button__former"
            disabled=""
            name=""
            type="radio"
            value="5"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            未选中禁用态
            
            
          </span>
        </label>
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;
